# DNA_Analazer-Algorithms-for-working-with-text-in-CPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_RUS.md  test_3.txt  test_5.txt
algorithm/: DNA_Analyzer.cc  DNA_Analyzer.h  model.cc  model.h
interface/: ainterface.cc  ainterface.h  interface.cc  interface.h
src/: Makefile  main.cc
src/algorithm/: DNA_Analyzer.cc  DNA_Analyzer.h
src/interface/: ainterface.cc  ainterface.h  interface.cc  interface.h
src/tests/: CMakeLists.txt  HIV-1_AF033819.3.txt  test_4.txt  tests.cc
test/: CMakeLists.txt  test_1.txt  test_2.txt  tests.cc
